--- a/01.html
+++ b/01.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .font_bold{}
+        .font_bold{
+            font-weight: bold;
+        }
+        .font_style{
+            font-style: italic;
+        }
+        .font_size{
+            font-size: 2em;
+        }
+        .text_center{
+            text-align: center;
+        }
         .button{
             width: 150px;
             height: 70px;
