--- a/02.html
+++ b/02.html
@@ -21,13 +21,16 @@
         }
         .box:nth-child(3){
             background-color: blue;
-            left: 90px; top: 90px;
+            left: 90px; top: 90px; z-index: 1;
         }
     </style>
 </head>
 <body>
+    
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
 </body>
 </html>
