--- a/06.html
+++ b/06.html
@@ -13,7 +13,7 @@
         height: 100px;
         margin: 20px;
         padding: 10px;
-        float: right;
+        float: left;
     }
 </style>
 <body>
